--- a/index.html
+++ b/index.html
@@ -1,4 +1,195 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Photo app</title>
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.-css" />
+</head>
+
 <body>
-    <div>Project</div>
+    <!-- Шапка сайта -->
+    <header>
+        <nav>
+            <a href="./index.html" class="logo">
+                <img src="./images/logo.svg" alt="Логотип компании" />
+                photo
+            </a>
+
+            <ul class="site-nav list">
+                <li><a href="" class="link current">Features</a></li>
+                <li><a href="" class="link">Pricing</a></li>
+                <li><a href="./community.html" class="link">Community</a></li>
+                <li><a href="" class="link">Support</a></li>
+            </ul>
+
+            <ul class="auth-nav list">
+                <li><a href="" class="button primary">Log in</a></li>
+                <li><a href="" class="button secondary">Register</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Герой -->
+        <section class="hero">
+            <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+            <a href="" class="button primary">Join today</a>
+        </section>
+
+        <!-- Преимущества -->
+        <section class="section">
+            <h2 class="section-title">
+                Snap photos and share like <br />never before
+            </h2>
+
+            <ul class="feature-list">
+                <li>
+                    <h3 class="title">Sed ut perspiciatis</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est.
+                    </p>
+                    <a href="" class="button secondary">Learn more</a>
+                </li>
+                <li>
+                    <h3 class="title">Lorem ipsum dolor</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est.
+                    </p>
+                    <a href="" class="button secondary">Learn more</a>
+                </li>
+                <li>
+                    <h3 class="title">Nemo enim ipsam</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est.
+                    </p>
+                    <a href="" class="button secondary">Learn more</a>
+                </li>
+                <li>
+                    <h3 class="title">Tempor incididunt</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est.
+                    </p>
+                    <a href="" class="button secondary">Learn more</a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Примеры работ -->
+        <section class="section">
+            <h2 class="section-title">Examples</h2>
+
+            <ul class="work-list">
+                <li>
+                    <img src="./images/placeholder.png" alt="Зимний лес" width="750" />
+                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+                    </p>
+                </li>
+                <li>
+                    <img src="./images/placeholder.png" alt="Поле" width="750" />
+                    <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                        aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Клиенты -->
+        <section class="section">
+            <h2 class="section-title">You’re in good company</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore
+            </p>
+
+            <ul>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/icon.svg" alt="Логотип компании" /></a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Регистрация -->
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore
+            </p>
+
+            <!-- я не джин 🐷 -->
+            <div>
+                <a href="" class="button primary">Join Today</a>
+                <a href="" class="button secondary">Contact us</a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Футер -->
+    <footer>
+        <ul>
+            <li><a href="">Mobile app</a></li>
+            <li><a href="">Community</a></li>
+            <li><a href="">Company</a></li>
+        </ul>
+
+        <a href="./index.html">
+            <img src="./images/logo.svg" alt="Логотип компании" />
+            photo
+        </a>
+
+        <ul>
+            <li><a href="">Help desk</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Resources</a></li>
+        </ul>
+
+        <ul>
+            <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+            <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+            <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+        </ul>
+
+        <p>&#169; Photo, Inc. 2019. We love our users!</p>
+    </footer>
 </body>
+
+</html>
